fixing additional entry text spacing

--- a/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
+++ b/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
@@ -303,7 +303,8 @@
 .raffleleader-additional-entry-text-column > p{
     font-size: 12px;
     padding: 0;
-    margin: 0.1vh 0 0 0;
+    margin: 0.3vh 0 0 0;
+    line-height: 2.5vh;
 }
 
 
